lenguajes/gen/MiLenguajeParser.java
// Generated from D:/Lenguajes/Lab3/TraductorPSICODER/lenguajes/grammar\MiLenguaje.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiLenguajeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, LINE_COMMENT=2, WS=3, TK_MAS=4, TK_MENOS=5, TK_MULT=6, TK_DIV=7, 
		TK_MOD=8, TK_ASIG=9, TK_MENOR=10, TK_MAYOR=11, TK_MENOR_IGUAL=12, TK_MAYOR_IGUAL=13, 
		TK_IGUAL=14, TK_Y=15, TK_O=16, TK_DIF=17, TK_NEG=18, TK_DOSP=19, TK_PYC=20, 
		TK_COMA=21, TK_PUNTO=22, TK_PAR_IZQ=23, TK_PAR_DER=24, TK_COMILLA_SEN=25, 
		TK_COMILLA_DOB=26, FUNCION_PRINCIPAL=27, FIN_PRINCIPAL=28, BOOLEANO=29, 
		CARACTER=30, ENTERO=31, REAL=32, CADENA=33, LEER=34, IMPRIMIR=35, SI=36, 
		ENTONCES=37, FIN_SI=38, SI_NO=39, MIENTRAS=40, HACER=41, FIN_MIENTRAS=42, 
		PARA=43, FIN_PARA=44, SELECCIONAR=45, ENTRE=46, CASO=47, ROMPER=48, DEFECTO=49, 
		FIN_SELECCIONAR=50, ESTRUCTURA=51, FIN_ESTRUCTURA=52, FUNCION=53, RETORNAR=54, 
		FIN_FUNCION=55, FALSO=56, VERDADERO=57, ID=58, TK_ENTERO=59, TK_REAL=60, 
		TK_CADENA=61, TK_CARACTER=62;
	public static final int
		RULE_program = 0, RULE_funcandstruct = 1, RULE_declarearguments = 2, RULE_declareargumentslist = 3, 
		RULE_mainfunction = 4, RULE_type = 5, RULE_standardtype = 6, RULE_funccontent = 7, 
		RULE_structcontent = 8, RULE_expression = 9, RULE_term = 10, RULE_value = 11, 
		RULE_argumentlist = 12, RULE_binaryoperator = 13, RULE_unaryoperator = 14, 
		RULE_declarationlist = 15, RULE_instructionlist = 16, RULE_instruction = 17, 
		RULE_conditional = 18, RULE_whilePSI = 19, RULE_forPSI = 20, RULE_dowhile = 21, 
		RULE_switchPSI = 22, RULE_caselist = 23, RULE_expressionlist = 24, RULE_structurelist = 25, 
		RULE_stinstructionlist = 26, RULE_fninstructionlist = 27, RULE_ifinstructionlist = 28, 
		RULE_whinstructionlist = 29, RULE_frinstructionlist = 30, RULE_dwinstructionlist = 31, 
		RULE_swinstructionlist = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "funcandstruct", "declarearguments", "declareargumentslist", 
			"mainfunction", "type", "standardtype", "funccontent", "structcontent", 
			"expression", "term", "value", "argumentlist", "binaryoperator", "unaryoperator", 
			"declarationlist", "instructionlist", "instruction", "conditional", "whilePSI", 
			"forPSI", "dowhile", "switchPSI", "caselist", "expressionlist", "structurelist", 
			"stinstructionlist", "fninstructionlist", "ifinstructionlist", "whinstructionlist", 
			"frinstructionlist", "dwinstructionlist", "swinstructionlist"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'<'", 
			"'>'", "'<='", "'>='", "'=='", "'&&'", "'||'", "'!='", "'!'", "':'", 
			"';'", "','", "'.'", "'('", "')'", "'''", "'\"'", "'funcion_principal'", 
			"'fin_principal'", "'booleano'", "'caracter'", "'entero'", "'real'", 
			"'cadena'", "'leer'", "'imprimir'", "'si'", "'entonces'", "'fin_si'", 
			"'si_no'", "'mientras'", "'hacer'", "'fin_mientras'", "'para'", "'fin_para'", 
			"'seleccionar'", "'entre'", "'caso'", "'romper'", "'defecto'", "'fin_seleccionar'", 
			"'estructura'", "'fin_estructura'", "'funcion'", "'retornar'", "'fin_funcion'", 
			"'falso'", "'verdadero'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "LINE_COMMENT", "WS", "TK_MAS", "TK_MENOS", "TK_MULT", 
			"TK_DIV", "TK_MOD", "TK_ASIG", "TK_MENOR", "TK_MAYOR", "TK_MENOR_IGUAL", 
			"TK_MAYOR_IGUAL", "TK_IGUAL", "TK_Y", "TK_O", "TK_DIF", "TK_NEG", "TK_DOSP", 
			"TK_PYC", "TK_COMA", "TK_PUNTO", "TK_PAR_IZQ", "TK_PAR_DER", "TK_COMILLA_SEN", 
			"TK_COMILLA_DOB", "FUNCION_PRINCIPAL", "FIN_PRINCIPAL", "BOOLEANO", "CARACTER", 
			"ENTERO", "REAL", "CADENA", "LEER", "IMPRIMIR", "SI", "ENTONCES", "FIN_SI", 
			"SI_NO", "MIENTRAS", "HACER", "FIN_MIENTRAS", "PARA", "FIN_PARA", "SELECCIONAR", 
			"ENTRE", "CASO", "ROMPER", "DEFECTO", "FIN_SELECCIONAR", "ESTRUCTURA", 
			"FIN_ESTRUCTURA", "FUNCION", "RETORNAR", "FIN_FUNCION", "FALSO", "VERDADERO", 
			"ID", "TK_ENTERO", "TK_REAL", "TK_CADENA", "TK_CARACTER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiLenguaje.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiLenguajeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<FuncandstructContext> funcandstruct() {
			return getRuleContexts(FuncandstructContext.class);
		}
		public FuncandstructContext funcandstruct(int i) {
			return getRuleContext(FuncandstructContext.class,i);
		}
		public MainfunctionContext mainfunction() {
			return getRuleContext(MainfunctionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MiLenguajeParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			funcandstruct();
			setState(67);
			mainfunction();
			setState(68);
			funcandstruct();
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncandstructContext extends ParserRuleContext {
		public TerminalNode FUNCION() { return getToken(MiLenguajeParser.FUNCION, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MiLenguajeParser.ID, 0); }
		public TerminalNode TK_PAR_IZQ() { return getToken(MiLenguajeParser.TK_PAR_IZQ, 0); }
		public DeclareargumentsContext declarearguments() {
			return getRuleContext(DeclareargumentsContext.class,0);
		}
		public TerminalNode TK_PAR_DER() { return getToken(MiLenguajeParser.TK_PAR_DER, 0); }
		public TerminalNode HACER() { return getToken(MiLenguajeParser.HACER, 0); }
		public FunccontentContext funccontent() {
			return getRuleContext(FunccontentContext.class,0);
		}
		public TerminalNode FIN_FUNCION() { return getToken(MiLenguajeParser.FIN_FUNCION, 0); }
		public FuncandstructContext funcandstruct() {
			return getRuleContext(FuncandstructContext.class,0);
		}
		public TerminalNode ESTRUCTURA() { return getToken(MiLenguajeParser.ESTRUCTURA, 0); }
		public StructcontentContext structcontent() {
			return getRuleContext(StructcontentContext.class,0);
		}
		public TerminalNode FIN_ESTRUCTURA() { return getToken(MiLenguajeParser.FIN_ESTRUCTURA, 0); }
		public FuncandstructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcandstruct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterFuncandstruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitFuncandstruct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitFuncandstruct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncandstructContext funcandstruct() throws RecognitionException {
		FuncandstructContext _localctx = new FuncandstructContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funcandstruct);
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				match(FUNCION);
				setState(72);
				type();
				setState(73);
				match(ID);
				setState(74);
				match(TK_PAR_IZQ);
				setState(75);
				declarearguments();
				setState(76);
				match(TK_PAR_DER);
				setState(77);
				match(HACER);
				setState(78);
				funccontent();
				setState(79);
				match(FIN_FUNCION);
				setState(80);
				funcandstruct();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(FUNCION);
				setState(83);
				type();
				setState(84);
				match(ID);
				setState(85);
				match(TK_PAR_IZQ);
				setState(86);
				match(TK_PAR_DER);
				setState(87);
				match(HACER);
				setState(88);
				funccontent();
				setState(89);
				match(FIN_FUNCION);
				setState(90);
				funcandstruct();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				match(ESTRUCTURA);
				setState(93);
				match(ID);
				setState(94);
				structcontent();
				setState(95);
				match(FIN_ESTRUCTURA);
				setState(96);
				funcandstruct();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareargumentsContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MiLenguajeParser.ID, 0); }
		public DeclareargumentslistContext declareargumentslist() {
			return getRuleContext(DeclareargumentslistContext.class,0);
		}
		public DeclareargumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarearguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterDeclarearguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitDeclarearguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitDeclarearguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareargumentsContext declarearguments() throws RecognitionException {
		DeclareargumentsContext _localctx = new DeclareargumentsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarearguments);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			type();
			setState(102);
			match(ID);
			setState(103);
			declareargumentslist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareargumentslistContext extends ParserRuleContext {
		public TerminalNode TK_COMA() { return getToken(MiLenguajeParser.TK_COMA, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MiLenguajeParser.ID, 0); }
		public DeclareargumentslistContext declareargumentslist() {
			return getRuleContext(DeclareargumentslistContext.class,0);
		}
		public DeclareargumentslistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareargumentslist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterDeclareargumentslist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitDeclareargumentslist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitDeclareargumentslist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareargumentslistContext declareargumentslist() throws RecognitionException {
		DeclareargumentslistContext _localctx = new DeclareargumentslistContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declareargumentslist);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_COMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(TK_COMA);
				setState(106);
				type();
				setState(107);
				match(ID);
				setState(108);
				declareargumentslist();
				}
				break;
			case TK_PAR_DER:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainfunctionContext extends ParserRuleContext {
		public TerminalNode FUNCION_PRINCIPAL() { return getToken(MiLenguajeParser.FUNCION_PRINCIPAL, 0); }
		public InstructionlistContext instructionlist() {
			return getRuleContext(InstructionlistContext.class,0);
		}
		public TerminalNode FIN_PRINCIPAL() { return getToken(MiLenguajeParser.FIN_PRINCIPAL, 0); }
		public MainfunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainfunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterMainfunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitMainfunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitMainfunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainfunctionContext mainfunction() throws RecognitionException {
		MainfunctionContext _localctx = new MainfunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mainfunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(FUNCION_PRINCIPAL);
			setState(114);
			instructionlist();
			setState(115);
			match(FIN_PRINCIPAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode BOOLEANO() { return getToken(MiLenguajeParser.BOOLEANO, 0); }
		public TerminalNode CARACTER() { return getToken(MiLenguajeParser.CARACTER, 0); }
		public TerminalNode ENTERO() { return getToken(MiLenguajeParser.ENTERO, 0); }
		public TerminalNode REAL() { return getToken(MiLenguajeParser.REAL, 0); }
		public TerminalNode CADENA() { return getToken(MiLenguajeParser.CADENA, 0); }
		public TerminalNode ID() { return getToken(MiLenguajeParser.ID, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEANO) | (1L << CARACTER) | (1L << ENTERO) | (1L << REAL) | (1L << CADENA) | (1L << ID))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StandardtypeContext extends ParserRuleContext {
		public TerminalNode BOOLEANO() { return getToken(MiLenguajeParser.BOOLEANO, 0); }
		public TerminalNode CARACTER() { return getToken(MiLenguajeParser.CARACTER, 0); }
		public TerminalNode ENTERO() { return getToken(MiLenguajeParser.ENTERO, 0); }
		public TerminalNode REAL() { return getToken(MiLenguajeParser.REAL, 0); }
		public TerminalNode CADENA() { return getToken(MiLenguajeParser.CADENA, 0); }
		public StandardtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_standardtype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterStandardtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitStandardtype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitStandardtype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StandardtypeContext standardtype() throws RecognitionException {
		StandardtypeContext _localctx = new StandardtypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_standardtype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEANO) | (1L << CARACTER) | (1L << ENTERO) | (1L << REAL) | (1L << CADENA))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunccontentContext extends ParserRuleContext {
		public FninstructionlistContext fninstructionlist() {
			return getRuleContext(FninstructionlistContext.class,0);
		}
		public TerminalNode RETORNAR() { return getToken(MiLenguajeParser.RETORNAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode TK_PYC() { return getToken(MiLenguajeParser.TK_PYC, 0); }
		public TerminalNode ROMPER() { return getToken(MiLenguajeParser.ROMPER, 0); }
		public FunccontentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funccontent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterFunccontent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitFunccontent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitFunccontent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunccontentContext funccontent() throws RecognitionException {
		FunccontentContext _localctx = new FunccontentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funccontent);
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				fninstructionlist();
				setState(122);
				match(RETORNAR);
				setState(123);
				expression(0);
				setState(124);
				match(TK_PYC);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				fninstructionlist();
				setState(127);
				match(ROMPER);
				setState(128);
				match(TK_PYC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
